# pydggsapi

./: .env.sample  .gitignore  .readthedocs.yml  CITATION.cff  README.md  README_API.md  dggs_api_config.json  dggs_api_config_example.json  env.sample  h3_2_igeo7_example.ipynb  micromamba_env.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: Dockerfile
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  requirements.txt
docs/source/example_notebook/: Endpoints_Examples.ipynb
docs/source/providers/: index.rst
docs/source/providers/collection_providers/: index.rst
docs/source/providers/collection_providers/implementations/: clickhouse_collection_provider.rst  parquet_collection_provider.rst  zarr_collection_provider.rst
docs/source/providers/dggrs/: index.rst
docs/source/providers/dggrs/implementation/: h3_dggrs_provider.rst
docs/source/providers/dggrs/implementations/: dggal_dggrs_provider.rst  igeo7_dggrs_provider.rst
docs/source/tinydb_configuration/: index.rst
pydggsapi/: __init__.py  api.py  main.py  pyproject.toml
pydggsapi/dependencies/: authentication.py  collections.py  db.py  dggrs_indexes.py  dggs_isea7h.py
pydggsapi/dependencies/api/: collection_providers.py  collections.py  dggrs.py  utils.py
pydggsapi/dependencies/collections_providers/: AbstractCollectionProvider.py  abstract_collection_provider.py  clickhouse.py  clickhouse_collection_provider.py  db.py  filebase.py  parquet_collection_provider.py  stac_collection_provider.py  zarr_collection_provider.py
pydggsapi/dependencies/config/: api.py  collections.py  dggrs_indexes.py
pydggsapi/dependencies/dggrs_providers/: AbstractDGGRS.py  IGEO7.py  VH3.py  abstract_dggrs_provider.py  dggal_dggrs_provider.py  dggrid.py  h3.py  h3_dggrs_provider.py  igeo7.py  igeo7_dggrs_provider.py  vh3.py
pydggsapi/models/: tiles_model.py
pydggsapi/models/ogc_dggs/: core.py  data_retrieval.py  zone_query.py
pydggsapi/routers/: dggs_api.py  tiles_api.py
pydggsapi/schemas/: common_basemodel.py  common_geojson.py
pydggsapi/schemas/api/: collection_providers.py  collectionproviders.py  collections.py  config.py  dggrs_providers.py  dggs_providers.py  dggsproviders.py
pydggsapi/schemas/ogc_collections/: collections.py  extent.py  queryables.py  schema.py
pydggsapi/schemas/ogc_dggs/: collections_dggs.py  common_ogc_dggs_api.py  dggrs_descrption.py  dggrs_list.py  dggrs_model.py  dggrs_zones.py  dggrs_zones_data.py  dggrs_zones_info.py
pydggsapi/schemas/tiles/: tiles.py
pydggsapi/test/: dggs_api_config.json  test_collections_list.py  test_core_dggrs_description.py  test_core_dggrs_list.py  test_core_dggrs_zoneinfo.py  test_core_dggrs_zoneinfo_H3.py  test_core_dggrs_zoneinfo_VH3.py  test_data-retrieval_query_zone_data.py  test_data-retrieval_query_zone_data_H3.py  test_data-retrieval_query_zone_data_VH3.py  test_main.py  test_zone-query_dggrs_zones.py  test_zone-query_dggrs_zones_H3.py  test_zone-query_dggrs_zones_VH3.py  xtest_core_dggrs_list.py  xtest_core_dggrs_zoneinfo.py  xtest_core_dggrs_zoneinfo_VH3.py
pydggsapi/test/test_collection_provider/: collection_provider_test_collection_data-retrieval_query_zone_data.py  collection_provider_test_collection_data-retrieval_query_zone_data_H3.py
pydggsapi/test/test_cql/: dggs_api_config_new.json  dggs_api_config_testing.json  test_cql_data-retrieval_query_zone_data.py  test_cql_zone-query_dggrs_zones.py  test_datetime_data-retrieval_query_zone_data.py
pydggsapi/test/test_dggal/: dggal_provider_test_core_dggrs_description.py  dggal_provider_test_core_dggrs_list.py  dggal_provider_test_core_dggrs_zoneinfo.py  dggal_provider_test_data-retrieval_query_zone_data.py  dggal_provider_test_zone-query_dggrs_zones.py  dggs_api_config_testing.json  test_dggal_provider_core_dggrs_list.py  test_dggal_provider_data-retrieval_query_zone_data.py  test_dggal_provider_zone-query_dggrs_zones.py
pydggsapi/test/test_igeo7_NO_wgs84_geodetic_conversion/: test_core_dggrs_zoneinfo.py  test_data-retrieval_query_zone_data.py  test_data-retrieval_query_zone_data_H3.py  test_zone-query_dggrs_zones.py  test_zone-query_dggrs_zones_H3.py
pydggsapi/test/test_igeo7_wgs84_geodetic_conversion/: dggs_api_config_testing.json  test_core_dggrs_zoneinfo.py  test_core_dggrs_zoneinfo_H3.py  test_data-retrieval_query_zone_data_H3.py  test_zone-query_dggrs_zones.py  test_zone-query_dggrs_zones_H3.py
pydggsapi/test/test_schemas/: test_extent.py
